# Refferal_System

./: .dockerignore  .gitignore  README.md  docker-compose.yml  pyproject.toml
refferal_system/: manage.py
refferal_system/refferal/: apps.py  backends.py  managers.py  models.py  serializers.py  urls.py  utils.py  views.py
refferal_system/refferal/migrations/: 0001_initial.py  0002_alter_user_invite_refferal_token.py
refferal_system/refferal_system/: asgi.py  settings.py  urls.py  wsgi.py
